
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_gray"
        android:padding="@dimen/keyline_1">

        <TextView
            android:id="@+id/titleTextView"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/lighter_gray"
            tools:context="com.sohail.patternizer.Detail_Activity_Fragment"
            tools:text="Title" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:padding="@dimen/keyline_1">

        <TextView
            android:id="@+id/nameTextView"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:context="com.sohail.patternizer.Detail_Activity_Fragment"
            tools:text="By Designer's Name" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:layout_marginTop="@dimen/keyline_2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc_likes"
                android:src="@drawable/thumb"/>

            <TextView
                android:id="@+id/likesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/bottomTextSize"
                tools:text="16777215" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/likes"
                android:textSize="@dimen/bottomTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc_views"
                android:src="@drawable/eye"/>

            <TextView
                android:id="@+id/viewsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/bottomTextSize"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/views"
                android:textSize="@dimen/bottomTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/shareImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_desc_share"
             android:src="@drawable/share"/>

            <TextView
                android:id="@+id/shareTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share"
                android:textSize="@dimen/bottomTextSize" />

        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>